--- a/Matt.Math.Stats.Wilson/Matt.Math.Stats.Wilson.csproj
+++ b/Matt.Math.Stats.Wilson/Matt.Math.Stats.Wilson.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Title>Matt.Math.Stats.Wilson</Title>
     <Description>C# implementation of the Wilson score</Description>
     <Copyright>2017 Matthew Thomas</Copyright>
-    <VersionPrefix>1.0.2</VersionPrefix>
+    <VersionPrefix>1.0.3</VersionPrefix>
     <VersionSuffix />
     <Company />
     <Authors>Matthew Thomas</Authors>
